modules/noosphere/taghmata/nixidy/manifests/prod/sabnzbd/Service-sabnzbd.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: yarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: sabnzbd
  type: ClusterIP
